# recli

./: .gitignore  Cargo.toml  database.db
.sqlx/: query-2ec9879e91c93d5ef877b05e861dc92075e4b9e5d730ad04fc9ff993679d76b4.json  query-53ac3ad197fa63f8559c3a66b929620b5b06ca0a50aae29ff04c65f5dee0f7c7.json  query-81f75d9d1012a0084a1c863b80b06504660fc06ed4e7b06ee29dcbfc50056427.json  query-95b7c46503087c8c2375556ca24e42195f2f02beb119c5ecebacdd40164126eb.json  query-a47c8ec99983f2d3c98d3b27c2c8a382dc9a404de06bb525b4181cea6fa40785.json  query-b806ed5249225a4c5525436dcf09dd1544a2c1eaad05594d1afee9ae348c58c0.json  query-ee044b20e579052423abc69268e403667671f1a05116a9dbfd130145779dc82b.json
src/: api.rs  database.rs  main.rs  spaced_repetition.rs  utilities.rs
